Copyright (c) 2002-2009 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes
=============

Silva 2.2b1 (unreleased)
------------------------

- Indexer, File and Image use Z3C forms as add forms.

- Interfaces have moved in silva.core.interfaces.

- Silva Link are displayed by default in Kupu TOCs.

- CTRL+SHIFT+ENTER in kupu while the cursor is in a table will
  create a new empty paragraph below the table.  This feature
  is to improve editing ability when a table is adjacent to an
  external source or another table

- improve keyboard navigability in kupu around external sources:
  left,right in an ES moves cursor up
  enter in an ES inserts a new paragraph after and moves cursor
  down, right, tab in an es moves cursor down

- if an ES is the first element in a document, activate the ES
  tool when kupu initializes, and ignore the tab key when in an
  external source.

- Fix an invalid syntax in webdav support.

- Fixed an issue in Kupu, where text got 'title' style instead
  of 'plain'.

- Fix from the 2.1 branch for a bug and improvement of the code for
  scaling and cropping images.

- Added sup and sub selectors to frontend.css to keep superscript and
  subscript better aligned.

- Added the YUI reset.css to silva.css and refactored accordingly,
  removing 50 lines or so.

- Removed the sortable css id/class from templates, js, and
  stylesheets.  This triggered some link problems with listing links
  that rendered as blocks instead of inline. Could've used the id but
  extensions may not have it, so added an unblock class to be used in
  a tbody or tr.

- Silva Indexer now store an id to objects, this makes indexes more
  resistant to object renaming/moving. The preview of Indexer have
  been fixed as well.

- Add support for new silva.core.layout to customize error messages
  (unauthorized, 404, errors)...

- Fix bug on service subscription when using MaildropHost with Zope
  2.11+.
