@@ -3,6 +3,7 @@
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:grok="http://namespaces.zope.org/grok"
     xmlns:silva="http://infrae.com/ns/silvaconf"
+    xmlns:browser="http://namespaces.zope.org/browser"
     i18n_domain="silva">
 
   <!-- i18n -->
@@ -75,5 +76,13 @@
     provides="zope.publisher.interfaces.browser.IBrowserPublisher"
     />
 
+  <!-- lookup window edit button support -->
+
+  <browser:page
+    for="Products.Silva.interfaces.ISilvaObject"
+    name="resolve_and_redirect_editor"
+    class=".lookupwindowfield.EditButtonRedirector"
+    permission="silva.ReadSilvaContent"
+  /> 
 
 </configure>
